--- a/style.css
+++ b/style.css
@@ -14,11 +14,15 @@ body {
   font-family: "Spartan", sans-serif;
   line-height: 1;
   font-weight: 300;
+  font-size: 1.5rem;
+  background-color: hsl(0, 0%, 100%);
 
   /* max-height: 100vh; */
   display: flex;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
+  margin-left: 128px; /* DELETE*/
+  margin-top: 74px; /* DELETE*/
   height: 100vh;
 }
 
@@ -27,8 +31,8 @@ body {
   max-width: 111rem;
   flex-direction: column;
   margin-top: 4.1rem;
-  /* align-content: center; */
-  /* justify-content: center; */
+  /* align-content: center; */ /* DELETE*/
+  /* justify-content: center; */ /* DELETE*/
 }
 
 .grid-container {
@@ -41,6 +45,23 @@ body {
 .text-box {
   grid-column: 1;
   max-height: 26.6rem;
+  margin-right: 10rem;
+}
+
+.text-title {
+  font-size: 4.8rem;
+  font-weight: 700;
+  letter-spacing: -1.7px;
+  color: hsl(300, 43%, 22%);
+  /* color: hsl(300, 3%, 51%); */ /* DELETE*/
+  margin-bottom: 1.27rem;
+}
+
+.text-description {
+  color: hsl(303, 10%, 53%);
+  font-weight: 500;
+  line-height: 1.67;
+  letter-spacing: -0.5px;
 }
 
 /* --------- STAR RATING SECTION ------------ */
@@ -48,13 +69,43 @@ body {
   grid-column: 2;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1.6rem;
 }
 
 .reviews-container {
   display: flex;
   align-items: center;
-  gap: 4rem;
+  gap: 3.2rem;
+  background-color: hsl(300, 24%, 96%);
+  max-width: 44.5rem;
+  padding: 2rem;
+  border-radius: 0.8rem;
+  /* margin-left: 3rem; */
+}
+
+.star-rating-box .reviews-container:first-child {
+  margin-top: 1.4rem;
+  margin-left: 1.5rem;
+}
+
+.star-rating-box .reviews-container:nth-child(2) {
+  margin-left: 6.3rem;
+}
+
+.star-rating-box .reviews-container:last-child {
+  margin-left: 11rem;
+}
+
+.stars-box {
+  display: flex;
+  margin-left: 1.2rem;
+  gap: 0.8rem;
+}
+
+.review-text {
+  font-size: 1.3rem;
+  font-weight: 700;
+  color: hsl(300, 43%, 22%);
 }
 
 /* --------- TESTIMONIAL SECTION ------------ */
