--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 html {
   font-size: 62.5%;
+  /* height: 100%; */
 }
 
 body {
@@ -17,34 +18,41 @@ body {
   font-size: 1.5rem;
   background-color: hsl(0, 0%, 100%);
 
-  /* max-height: 100vh; */
+  /* max-height: 100vh; DELETE*/
   display: flex;
-  /* align-items: center; */
-  /* justify-content: center; */
-  margin-left: 128px; /* DELETE*/
-  margin-top: 74px; /* DELETE*/
-  height: 100vh;
+  /* align-items: center; DELETE*/
+  justify-content: center;
+  min-height: 100vh;
+  /* min-height: 100%; */
+
+  /* ----- BACKGROUND IMG -----*/
+  background-image: url("images/bg-pattern-top-desktop.svg"),
+    url("images/bg-pattern-bottom-desktop.svg");
+  background-repeat: no-repeat;
+  background-position: top -1.7rem left -3.6rem, bottom -1.7rem right -3.6rem;
+  /* z-index: 10; */
 }
 
 .main-container {
-  display: flex;
+  /* display: flex; */
   max-width: 111rem;
-  flex-direction: column;
-  margin-top: 4.1rem;
-  /* align-content: center; */ /* DELETE*/
-  /* justify-content: center; */ /* DELETE*/
+  /* flex-direction: column; */
+  margin: 0 auto;
+  margin-top: 11.54rem;
+  /* margin-top: 4.1rem; NOTE: Esto es el "height" del "footer" */
+  /* margin-top: 11.54rem; FIX: dejar centrado con el footer debajo */
 }
 
 .grid-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  margin-bottom: 7.1rem;
 }
 
 /* --------- INTRO TEXT SECTION ------------ */
 .text-box {
   grid-column: 1;
-  max-height: 26.6rem;
+  /* max-height: 26.6rem; DELETE*/
   margin-right: 10rem;
 }
 
@@ -53,7 +61,6 @@ body {
   font-weight: 700;
   letter-spacing: -1.7px;
   color: hsl(300, 43%, 22%);
-  /* color: hsl(300, 3%, 51%); */ /* DELETE*/
   margin-bottom: 1.27rem;
 }
 
@@ -80,7 +87,6 @@ body {
   max-width: 44.5rem;
   padding: 2rem;
   border-radius: 0.8rem;
-  /* margin-left: 3rem; */
 }
 
 .star-rating-box .reviews-container:first-child {
@@ -112,24 +118,66 @@ body {
 .testimonial-box {
   grid-row: 2;
   grid-column: 1 / -1;
-  max-height: 26.6rem;
+  /* max-height: 26.6rem; */
 
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  column-gap: 3rem;
 }
 
 .testimonial {
-  /* grid-column: span 2;  BORRAR ESTA LÍNEA DESPUÉS*/
+  background-color: hsl(300, 43%, 22%);
+  max-width: 35rem;
+  /* max-height: 26rem; */
+  /* max-height: 29rem;  FIX: VER POR QUÉ NO PODÉS APLICAR*/
+  height: 23.4rem;
+  /* padding: 4.1rem 3.2rem; */
+  padding: 4rem 3.2rem 1rem 3.2rem;
+  border-radius: 0.8rem;
 }
 
-.colton {
-  /* grid-column: 1 / 3; */
+.irene {
+  margin-top: 1.6rem;
+}
+
+.anne {
+  margin-top: 3.2rem;
 }
 
 .testimonial-header {
   display: flex;
   align-items: center;
-  gap: 2rem;
+  gap: 2.32rem;
+  margin-bottom: 2.7rem;
+}
+
+.author-photo {
+  width: 4rem;
+  border-radius: 50%;
+}
+
+.text-container {
+  margin-top: 0.3rem;
+}
+
+.testimonial-author {
+  color: hsl(0, 0%, 100%);
+  font-size: 1.3rem;
+  font-weight: 700;
+  margin-bottom: 0.7rem;
+}
+
+.author-description {
+  font-size: 1.3rem;
+  color: hsl(333, 80%, 67%);
+  /* font-weight: 200; */
+}
+
+.testimonial-text {
+  color: hsl(0, 0%, 100%);
+  font-size: 1.3rem;
+  line-height: 2.2rem;
+  letter-spacing: -0.18px;
 }
 
 /* ----------------- FOOTER ------------------- */
