finish footer's style and add README.md file

--- a/style.css
+++ b/style.css
@@ -170,8 +170,20 @@ body {
   font-size: 1.1rem;
   text-align: center;
   padding: 1.5rem 0;
+  font-weight: 500;
 }
 
-.attribution a {
-  color: hsl(228, 45%, 44%);
+.attribution a:link,
+.attribution a:visited {
+  color: hsl(300, 29%, 30%);
+  text-decoration: none;
+  border-bottom: 0.6px solid currentColor;
+  font-weight: inherit;
+  transition: all 0.25s;
+}
+
+.attribution a:hover,
+.attribution a:active {
+  color: hsl(300, 29%, 30%);
+  border-bottom: 0.6px solid transparent;
 }
